--- a/style-light.css
+++ b/style-light.css
@@ -431,6 +431,10 @@
     margin-top: 20px;
     margin-bottom: 60px;
     padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .firsth__subtitle {
@@ -492,7 +496,7 @@
   .pillar-card {
     width: 80vw;
     min-width: unset;
-    padding: 18px 10px 18px 10px;
+    padding: 18px 20px 18px 20px;
     margin-bottom: 18px;
     min-height: 320px;
     padding-bottom: 44px;
@@ -517,11 +521,12 @@
   .pillar-card__desc {
     font-size: 0.95rem;
     margin-bottom: 18px;
+    padding-bottom: 30px;
   }
 
   .pillar-card__icon {
-    left: 10px;
-    bottom: 0px;
+    left: 18px;
+    bottom: 23px;
     width: 36px;
     height: 36px;
     font-size: 1.1rem;
@@ -662,7 +667,7 @@
   }
   .our-mission .right-content {
     border-left: none;
-     border-left: 3px solid #ab8244;
+    border-top: 3px solid #ab8244;
     margin-left: 0;
     margin-top: 32px;
     padding-top: 24px;
@@ -678,57 +683,6 @@
   }
 }
 
-@media (max-width: 600px) {
-  .our-mission {
-    margin: 30px 0 0 0;
-    padding: 0 3vw;
-  }
-  
-  .our-mission .left-content, .our-mission .right-content {
-    padding: 0 2vw;
-  }
-  
-  .our-mission h1 {
-    font-size: 1.3rem;
-    margin: 20px 0 10px 0;
-  }
-  
-  .our-mission p {
-    font-size: 0.9rem;
-    line-height: 1.5;
-  }
-  
-  .om {
-    width: 160px;
-    height: 50px;
-    font-size: 0.9rem;
-    padding: 8px 16px;
-  }
-}
-
-@media (max-width: 480px) {
-  .our-mission {
-    padding: 0 2vw;
-  }
-  
-  .our-mission .left-content, .our-mission .right-content {
-    padding: 0 1vw;
-  }
-  
-  .our-mission h1 {
-    font-size: 1.2rem;
-  }
-  
-  .our-mission p {
-    font-size: 0.85rem;
-  }
-  
-  .om {
-    width: 140px;
-    height: 45px;
-    font-size: 0.85rem;
-  }
-}
 
 /* OUR VALUES SECTION */
 .our-values {
@@ -977,6 +931,7 @@
   color: #605f5f;
   letter-spacing: 0.2px;
 }
+
 @media (max-width: 768px) {
   .our-commitment {
     margin-top: 5vh; /* shrink top margin */
